Begin migrating to NetworkFunctionalities